--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetalleVenta/Edit.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetalleVenta/Edit.cshtml
@@ -6,89 +6,81 @@
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto> productos = ViewBag.Producto as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto>;
 }
 
-<h1>Modificar</h1>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Modificar Detalle Ventas</h1>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-6">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="IdDetalleVenta" class="form-control" />
 
-<h4>Detalle Ventas</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="IdDetalleVenta" class="form-control" />
-            <div class="form-group">
-                <label asp-for="Cantidad" class="control-label"></label>
-                <input asp-for="Cantidad" class="form-control" />
-                <span asp-validation-for="Cantidad" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ValorTotal" class="control-label"></label>
-                <input asp-for="ValorTotal" class="form-control" />
-                <span asp-validation-for="ValorTotal" class="text-danger"></span>
-            </div>
-
-            <div class="row">
-
-                <div class="col-md-4">
                     <div class="form-group">
-                        <label asp-for="IdProducto" class="control-label"></label>
-                        <select asp-for="IdProducto" class="form-control">
-                            <option selected value="">SELECCIONAR</option>
-                            @foreach (var item in productos)
-                            {
-                                if (Model.IdProducto == item.IdProducto)
-                                {
-                                    <option selected value="@item.IdProducto">@item.Nombre</option>
-                                }
-                                else
-                                {
-                                    <option value="@item.IdProducto">@item.Nombre</option>
-                                }
-                            }
-                        </select>
-                        <span asp-validation-for="IdProducto" class="text-danger"></span>
+                        <label asp-for="Cantidad" class="control-label"></label>
+                        <input asp-for="Cantidad" class="form-control" />
+                        <span asp-validation-for="Cantidad" class="text-danger"></span>
                     </div>
+
+                    <div class="form-group">
+                        <label asp-for="ValorTotal" class="control-label"></label>
+                        <input asp-for="ValorTotal" class="form-control" />
+                        <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="IdProducto" class="control-label"></label>
+                    <select asp-for="IdProducto" class="form-control">
+                        <option selected value="">SELECCIONAR</option>
+                        @foreach (var item in productos)
+                        {
+                            if (Model.IdProducto == item.IdProducto)
+                            {
+                                <option selected value="@item.IdProducto">@item.Nombre</option>
+                            }
+                            else
+                            {
+                                <option value="@item.IdProducto">@item.Nombre</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="IdProducto" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="IdVenta" class="control-label"></label>
+                    <select asp-for="IdVenta" class="form-control">
+                        <option selected value="">SELECCIONAR</option>
+                        @foreach (var item in ventas)
+                        {
+                            if (Model.IdVenta == item.IdVenta)
+                            {
+                                <option selected value="@item.IdVenta">@item.NumeroVenta</option>
+                            }
+                            else
+                            {
+                                <option value="@item.IdVenta">@item.NumeroVenta</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="IdVenta" class="text-danger"></span>
+                </div>
+
+                <div class="form-group" style="margin-top: 10px;">
+                    <button type="submit" class="btn btn-success" style="margin-right: 10px;">
+                        <i class="fas fa-save"></i> Guardar
+                    </button>
+                    <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
+                        <i class="fas fa-times"></i> Cancelar
+                    </button>
                 </div>
             </div>
-            <div class="row">
-
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label asp-for="IdVenta" class="control-label"></label>
-                        <select asp-for="IdVenta" class="form-control">
-                            <option selected value="">SELECCIONAR</option>
-                            @foreach (var item in ventas)
-                            {
-                                if (Model.IdVenta == item.IdVenta)
-                                {
-                                    <option selected value="@item.IdVenta">@item.NumeroVenta</option>
-                                }
-                                else
-                                {
-                                    <option value="@item.IdVenta">@item.NumeroVenta</option>
-                                }
-                            }
-                        </select>
-                        <span asp-validation-for="IdVenta" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-
-
-            @*BOTONES EDITADOS CON ICONOS*@
-
-            <div class="form-group" style="margin-top: 10px;">
-                <button type="submit" class="btn btn-success" style="margin-right: 10px;">
-                    <i class="fas fa-save"></i> Guardar
-                </button>
-
-                <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-                    <i class="fas fa-times"></i> Cancelar
-                </button>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-
 
 @section Scripts {
     @{
