--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetallesCompra/ObtenerCompra.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetallesCompra/ObtenerCompra.cshtml
@@ -3,6 +3,9 @@
     SysInventarioFacturacionAgro.EntidadesDeNegocio.Compra compra = ViewBag.Compras as SysInventarioFacturacionAgro.EntidadesDeNegocio.Compra;
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto> productos = ViewBag.Producto as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto>;
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.DetallesCompra> ListaDetalle = ViewBag.ListaDetalle as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.DetallesCompra>;
+    List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Usuario> usuarios = ViewBag.Usuario as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Usuario>;
+
+
 }
 <div class="row">
     <div id="miDiv" style=" text-align: justify;">
