--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/CambiarPassword.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Usuario/CambiarPassword.cshtml
@@ -4,67 +4,70 @@
     ViewData["Title"] = "CambiarPassword";
 }
 
-<h1>Cambiar Contraseña</h1>
-<hr />
-<form asp-action="CambiarPassword">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Id" class="form-control" />
-    <div class="row">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label asp-for="Login" class="control-label"></label>
-                <input asp-for="Login" class="form-control" disabled />
-                <span asp-validation-for="Login" class="text-danger"></span>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Cambiar Contraseña</h1>
+    </div>
+    <form asp-action="CambiarPassword">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" class="form-control" />
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="Login" class="control-label"></label>
+                    <input asp-for="Login" class="form-control" disabled />
+                    <span asp-validation-for="Login" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label class="control-label">Contraseña Actual</label>
+                    <input type="password" name="pPasswordAnt" class="form-control" required />
+                </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="form-group">
-                <label class="control-label">Contraseña Actual</label>
-                <input type="password" name="pPasswordAnt" class="form-control" required />
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label class="control-label">Contraseña Nueva</label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="ConfirmPassword_aux" class="control-label">Confirmar Contraseña Nueva</label>
+                    <input asp-for="ConfirmPassword_aux" class="form-control" />
+                    <span asp-validation-for="ConfirmPassword_aux" class="text-danger"></span>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label class="control-label">Contraseña Nueva</label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
+
+        @*BOTONES DE CAMBIAR PASSWORD GUARDAR-REGRESAR*@
+
+        <div class="form-group" style="margin-top: 10px;">
+            <button type="submit" class="btn btn-success" style="margin-right: 10px;">
+                <i class="fas fa-save"></i> Cambiar Contraseña
+            </button>
+
+            <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
+                <i class="fas fa-times"></i> Cancelar
+            </button>
         </div>
-        <div class="col-md-4">
-            <div class="form-group">
-                <label asp-for="ConfirmPassword_aux" class="control-label">Confirmar Contraseña Nueva</label>
-                <input asp-for="ConfirmPassword_aux" class="form-control" />
-                <span asp-validation-for="ConfirmPassword_aux" class="text-danger"></span>
-            </div>
+
+        <span class="text-danger">@ViewBag.Error</span>
+
+        @*<div class="row">
+        <div class="col-md-12">
+        <div class="form-group">
+        <input type="submit" value="Cambiar password" class="btn btn-primary" />
         </div>
-    </div>
+        <span class="text-danger">@ViewBag.Error</span>
+        </div>
+        </div>*@
 
-    @*BOTONES DE CAMBIAR PASSWORD GUARDAR-REGRESAR*@
-
-    <div class="form-group" style="margin-top: 10px;">
-        <button type="submit" class="btn btn-success" style="margin-right: 10px;">
-            <i class="fas fa-save"></i> Cambiar Contraseña
-        </button>
-
-        <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-            <i class="fas fa-times"></i> Cancelar
-        </button>
-    </div>
-
-    <span class="text-danger">@ViewBag.Error</span>
-
-    @*<div class="row">
-    <div class="col-md-12">
-    <div class="form-group">
-    <input type="submit" value="Cambiar password" class="btn btn-primary" />
-    </div>
-    <span class="text-danger">@ViewBag.Error</span>
-    </div>
-    </div>*@
-
-</form>
+    </form>
+</div>
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
